
* IECore.Enum values can be instantiated from the appropriate string as well as the int.

* IECore.Enum has a classmethod values() which returns a tuple of the available values.

* SOP_InterpolatedCacheReader has a new transformAttribute parm which can be used to transform the points based on a TransformationMatrix in the cache.

Bug Fixes :

* ClassParameter.setClass() method was not taking advantage of a matching already loaded class if the searchPathEnvVar was None.

* Fixed a bug whereby EXRImageWriter::EXRImageWriter() didn't create parameters that EXRImageWriter::EXRImageWriter( image, fileName ) did.

* The renderman python procedural is now built with the correct extension (.dylib) on OS X.

* Fixed problem with using the ClientDisplayDriver on ipv6 enabled machines.

* IECoreNuke and IECoreArnold now build successfully on OS X.

* Fixed bugs in the arnold output driver which meant that exceptions in cortex display drivers went uncaught and became aborts when reaching arnold. Fixed further bugs where failure to create a cortex display driver would yield later
segmentation faults rather than a graceful error report.

* Fixed bug which made it impossible to output more than one display from IECoreArnold::Renderers.

Cortex 6.4.3
============

Improvements :

* Implemented checkboxes in maya menus
* Added a flag, "appendToExistingMenu", to IECoreMaya.Menu,createMenu(), so you can append a menu to an existing menu, rather than adding
  it as a sub menu

Cortex 6.4.2
============

Improvements :

* Implemented uniform array parameters in IECoreGL shaders (accepting IntVectorData, FloatVectorData, etc)

Bug Fixes :

* Fixed build issue that prevented saved options files from being used
* Fixed build issue that gave the test renderman display driver the wrong file suffix on mac
* Bound many missing canRead() functions for the Reader subclasses, and added a test case to make sure all future bindings will include them.

Cortex 6.4.1
============

Bug Fixes :
