@@ -1,6 +1,6 @@
 ##########################################################################
 #
-#  Copyright (c) 2010-2011, Image Engine Design Inc. All rights reserved.
+#  Copyright (c) 2010-2012, Image Engine Design Inc. All rights reserved.
 #
 #  Redistribution and use in source and binary forms, with or without
 #  modification, are permitted provided that the following conditions are
@@ -826,6 +826,21 @@ class TestToHoudiniCurvesConverter( IECoreHoudini.TestCase ) :
 		
 		sop = self.emptySop()
 		self.assertFalse( IECoreHoudini.ToHoudiniCurvesConverter( curves ).convert( sop ) )
+	
+	def testGroupName( self ) :
+		
+		sop = self.emptySop()
+		curves = self.curves()
+		curves.blindData()["name"] = IECore.StringData( "testGroup" )
+		self.assert_( IECoreHoudini.ToHoudiniCurvesConverter( curves ).convert( sop ) )
+		primGroups = sop.geometry().primGroups()
+		self.assertEqual( len(primGroups), 1 )
+		self.assertEqual( primGroups[0].name(), "testGroup" )
+		self.assertEqual( len(primGroups[0].prims()), curves.variableSize( IECore.PrimitiveVariable.Interpolation.Uniform ) )
+		pointGroups = sop.geometry().pointGroups()
+		self.assertEqual( len(pointGroups), 1 )
+		self.assertEqual( pointGroups[0].name(), "testGroup" )
+		self.assertEqual( len(pointGroups[0].points()), curves.variableSize( IECore.PrimitiveVariable.Interpolation.Vertex ) )
 	
 	def tearDown( self ) :
 		
